--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,9 +50,11 @@ find_package(catkin REQUIRED COMPONENTS
 
 ## Generate messages in the 'msg' folder
 add_message_files(
-   FILES
-   motor_command.msg
-   rot_state.msg
+  FILES
+  motor_command.msg
+  rot_state.msg
+#   Message1.msg
+#   Message2.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -71,8 +73,9 @@ add_message_files(
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
-   DEPENDENCIES
-   std_msgs
+  DEPENDENCIES
+  geometry_msgs
+  std_msgs
 )
 
 ################################################
@@ -107,7 +110,7 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES roskeigan_motor_usb
- CATKIN_DEPENDS message_runtime geometry_msgs roscpp rospy std_msgs
+#  CATKIN_DEPENDS geometry_msgs roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
